documentroot/static/static.css
/* */
div#palette {
    float: right;
    visibility: visible;
    width: 15%;
    clear: none;
    height: 100%;
    text-align: center;
    vertical-align: middle;
}

.colour_tile {
    width: 16px;
    height: 16px; 
    border: solid 1px black;
    float: left;
    margin: 0.15em;
}

/*
a:link {
    color: #053935;
}

a:visited {
    color: #104440;
}

a:hover {
    color: #1D6460;
}
*/


/*   */
body { 
    font-size: 1.0em;
    margin: 0;
    padding: 0;   
    color: #000;
    background-color: #dfdfdf;
/*    background-image: url(bg-hexel.png); */
}

div#content_wrapper {
    width: 100%;
    margin: 0;
    text-align: center;
}

div#content { 
    padding: 0.75em;
}

.center_column {
    text-align: left;
    width: 60em;
    margin: 0 auto;     
}

div#column_a { width: 69%;float: left }
div#column_b { width: 29%;float: right}



div#widget_stack {
    float: right;
} 


h1,h2,h3,h4,h5,h6 {
    margin: 0 0 0 0;
    margin-bottom: 0.5em;
    font-family: arial,helvetica,sans-serif;
}


#masthead {
    background-color: #aa99FF;
    
 /*   background-image: url(clouds.png);
    background-repeat: repeat-x;
    background-position: bottom left;
    bottom: 0;
    position: relative; */
    
    vertical-align: middle;
}

#masthead img {
    border: none;
}

img#padrelogo {
    padding: 0.5em;
    float: left;
}

#padresplash {
    background: url(splash.png);
    background-repeat: no-repeat;
    width: 300px;
    height: 320px;
}
#masthead p {
    margin: 0;
    padding: 0.5em;
}

ul.navigation {
    list-style-image: none;
    list-style: none;
    padding-left: 0em;
    margin: 0;
}

ul.navigation li {
    vertical-align: middle;
    font-family: arial,helvetica,sans-serif; 
    text-align: center;
    float: left;
  /*  width: 4em; */

    border: solid #CCC 1px;
    
        background-image: url(grad_flat.png);
        background-color: white;
        background-repeat: repeat-x;

}

ul.navigation a {
    height: 2em;
    line-height: 2em;
    text-transform: uppercase;
    padding: 0em 1em 0em 1em;
    color: #33A;
    text-decoration: none;
}

ul.navigation li:hover {
    background-image: url(grad_depressed.png);
    background-repeat: repeat-x;
    background-color: white;
}


ul.unstyled {
    list-style-image: none;
    list-style: none;
    padding-left: 0em;
    margin: 0;
}

div.column_a {
    width: 48%;
	float: left;
}

div.column_b {
	width: 48%;
	float: right;
}

.title_image {
    float: right;
    margin-left: 1em;
    clear: none;
}

ul#developers img {
    float: right;
    margin-left: 1em;;
}

h1.developer {
    font-weight: bold;
    font-size: 150%;
    margin: 0 0 0.5em 0;
    
}

ul#developers h2 {
    display: block;
    clear: both;
    font-style: italic;
    font-weight: bold;
    font-size: 125%;
}
p {
    text-align: justify;
    margin: 0;
    margin-bottom: 0.6em;
    padding-left: 1em;
}

address {
    display: inline;
}

/* Translators List */
ul#translators li {
/*    padding: 1em 1em 1em 1em;
    margin: 1em;
    border: 1px solid #AA8;
    background: inherit;

    width: 22%;
    float: left;
    clear: none;
    */
}

ul#translators img {
    float: right;
    margin-left: 1em;;
}

h1.developer {
    font-weight: bold;
    font-size: 150%;
    margin: 0 0 0.5em 0;
    
}

ul#translator h2 {
    display: block;
    clear: both;
    font-style: italic;
    font-weight: bold;
    font-size: 125%;
}

code {
    font-size: 125%;
}

.spacer {
    display: block;
    clear:both;
    width: 100%;
}

/* chrome - pretty stuff */
#spot_topleft {
        position: absolute;
        top: 0;
        left: 0;
        z-index: -1;
}
#spot_bottomright {
        position: fixed;
        bottom: 0;
        right: 0;
        z-index: -1;
}

.styled_panel_wrapper { 
    margin-bottom: 1em
}
.styled_panel {
    padding: 1em;
    border: solid 1px #ACA;
    background-color: white;
}


#sky {
    background-color: #637EA3;
    position: relative;
    width: 100%;
    height: 100px;
    overflow: hidden;
    }

#clouds {
    background-image: url(clouds.png);

    background-image: url(clouds.png);
    background-repeat: repeat-x;
    background-position: bottom left;
    bottom: 0;
    height: 100%;
    width: 100%;
    z-index: 2;
    position: absolute;
    opacity: 0.9
}
#sun { 
    position: absolute;
    background-image: url(sun.png);
    background-repeat: no-repeat;
    width: 64px; height: 64px ;
    background-position: center;

    left: 200px;
    bottom: 0px;
}
#sunglow {
    position: absolute;
    background-image: url(sunglow.png);
    background-repeat: no-repeat;
    
    width: 64px; height: 64px ;
    opacity: 0.5;
    z-index: 2;
}

/* widgets */
b.shadowed {
    background:transparent url(shadow_projection.png) no-repeat scroll right bottom;
    display:block;
    float:right;
    height:8px;
    width:200px;
}

div.widget_wrapper { 
    position: relative;
    margin-bottom: 1em;
}

div.widget {
    padding: 0.75em;
    border: 1px solid #AAD;
}

div#irc_launcher {
    text-align: right;
}

div#ohloh_graphic a {
    float: right;
    margin: 0.5em;
}


/* evil mozilla-isms */

ul.bottomheavy li {
    -moz-border-radius: 0px 0px 4px 4px;
}


ul.topheavy li {
    -moz-border-radius: 4px 4px 0px 0px ;
}

.styled_panel {
    -moz-border-radius: 0.5em;
    -moz-border-radius-bottom-right: 0px;    
}

